# Calendar

Application/: CMakeLists.txt
Application/src/: CMakeLists.txt  main.cpp
Application/src/core/: CMakeLists.txt  Palette.cpp  Palette.h  PaletteModel.cpp  PaletteModel.h  TemporalUnit.cpp  TemporalUnit.h
Application/src/ui/: CMakeLists.txt  Main.qml  test.qml
Application/src/ui/calendar/: Calendar.qml  Days.qml  MonthSelectionPopup.qml  TimelineBar.qml  qmldir
Application/src/ui/components/: CustomSwitch.qml  Function.qml  qmldir
Application/src/ui/settings/: ColorAlphaSlider.qml  ColorCircle.qml  ColorDetails.qml  ColorPicker.qml  ColorPickerContent.qml  ColorPickerPopup.qml  ColorTemplate.qml  Settings.qml  qmldir
